add TTY and PTS

--- a/commands/#2.md
+++ b/commands/#2.md
@@ -12,7 +12,7 @@ sudo ps -aux
 sudo ps -aux | grep [service_id]
 ```
 
-and most of them are **daemons** or **units**, we can identify them easily by checking if its id is ended with "d" 
+and most of them are **daemons** or **units**, we can identify them easily by checking if its id is ended with "d"
 ex:root         856  0.0  0.0  15412  8744 ?        Ss   21:05   0:00 sshd: /usr/sbin/sshd -D [listener] 0 of 10-100 startups
 
 ## how to control Daemons
@@ -20,7 +20,7 @@ ex:root         856  0.0  0.0  15412  8744 ?        Ss   21:05   0:00 sshd: /usr
 we can use the most used daemon master "systemD" (which stands for system daemon), who has two main jobs: service managing and initialization system.
 when we boot the system, linux kernel will start and execute it in the first place, so it has process id(PID) #1
 
-```
+```bash
 james@debian:~/projects/Debian_notes$ sudo systemctl 
 add-requires            halt                    list-timers             service-log-level
 add-wants               help                    list-unit-files         service-log-target
