--- a/commands/#4.md
+++ b/commands/#4.md
@@ -4,7 +4,7 @@ In order to add files to folder one can add a .desktop file to **/usr/share/appl
 
 In this example, **/opt/tor/Browser/start-tor-browser** is call to open a tor browser, so we need to specify it in the **exec=** line.
 
-```
+```.desktop
   GNU nano 7.2                          start-tor-browser.desktop                                   
 #!/usr/bin/env ./Browser/execdesktop
 #
